--- a/index.html
+++ b/index.html
@@ -6,162 +6,160 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
-    :root {
-      --bg: #fafafa;
-      --text: #111;
-      --muted: #666;
-      --card: #ffffff;
-      --border: #eeeeee;
-      --shadow: 0 10px 28px rgba(0,0,0,.10);
+    :root{
+      --bg:#fafafa;
+      --text:#111;
+      --muted:#666;
+      --card:#fff;
+      --border:#eaeaea;
+      --shadow:0 10px 28px rgba(0,0,0,.10);
     }
 
-    * { box-sizing: border-box; }
+    *{ box-sizing:border-box }
 
-    body {
+    body{
       font-family: Arial, sans-serif;
       margin: 0;
       background: var(--bg);
       color: var(--text);
     }
 
-    header {
-      text-align: center;
-      padding: 28px 16px 10px;
+    header{
+      text-align:center;
+      padding:28px 16px 10px;
     }
 
-    .brand-logo {
-      max-width: 280px;
-      width: 72%;
-      height: auto;
-      display: block;
-      margin: 0 auto;
+    .brand-logo{
+      max-width:300px;
+      width:72%;
+      height:auto;
+      display:block;
+      margin:0 auto;
     }
 
-    .subtitle {
-      margin-top: 10px;
-      font-size: 14px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      color: var(--muted);
-      text-align: center;
+    .subtitle{
+      margin-top:10px;
+      font-size:13px;
+      letter-spacing:2px;
+      text-transform:uppercase;
+      color:var(--muted);
     }
 
-    .wrap {
-      max-width: 980px;
-      margin: 0 auto;
-      padding: 32px 16px 40px;
+    .wrap{
+      max-width:1100px;
+      margin:0 auto;
+      padding:22px 16px 46px;
     }
 
-    .icons {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 18px;
-      align-items: stretch;
+    .buttons{
+      display:grid;
+      grid-template-columns:repeat(3, minmax(0, 1fr));
+      gap:18px;
+      margin-top:18px;
     }
 
-    a.icon {
-      background: var(--card);
-      border-radius: 999px;
-      height: 140px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      color: var(--text);
-      font-size: 20px;
-      font-weight: 700;
-      box-shadow: var(--shadow);
-      border: 1px solid var(--border);
-      transition: transform .08s ease-in-out;
-      user-select: none;
+    .btn{
+      background:var(--card);
+      border:1px solid var(--border);
+      box-shadow:var(--shadow);
+      border-radius:999px;
+      padding:34px 18px;
+      text-decoration:none;
+      color:var(--text);
+      font-weight:900;
+      font-size:18px;
+      text-align:center;
+      transition:transform .08s ease;
     }
 
-    a.icon:hover {
-      transform: translateY(-2px);
+    .btn:hover{
+      transform:translateY(-2px);
     }
 
-    footer {
-      text-align: center;
-      padding: 18px;
-      color: var(--muted);
-      font-size: 14px;
+    footer{
+      text-align:center;
+      padding:18px;
+      color:var(--muted);
+      font-size:14px;
     }
 
-    /* --- Age Gate --- */
-    .age-gate {
-      position: fixed;
-      inset: 0;
-      z-index: 9999;
-      background: rgba(0,0,0,.72);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
+    /* Age Gate */
+    .age-gate{
+      position:fixed;
+      inset:0;
+      z-index:9999;
+      background:rgba(0,0,0,.72);
+      display:none;
+      align-items:center;
+      justify-content:center;
+      padding:20px;
     }
 
-    .age-gate.show { display: flex; }
+    .age-gate.show{ display:flex }
 
-    .age-card {
-      background: #fff;
-      width: 100%;
-      max-width: 420px;
-      border-radius: 18px;
-      padding: 22px;
-      box-shadow: 0 20px 60px rgba(0,0,0,.35);
-      text-align: center;
+    .age-card{
+      background:#fff;
+      width:100%;
+      max-width:420px;
+      border-radius:18px;
+      padding:22px;
+      box-shadow:0 20px 60px rgba(0,0,0,.35);
+      text-align:center;
     }
 
-    .age-title {
-      font-size: 22px;
-      font-weight: 800;
-      margin-bottom: 8px;
-      letter-spacing: .5px;
+    .age-title{
+      font-size:22px;
+      font-weight:900;
+      margin-bottom:8px;
     }
 
-    .age-text {
-      color: #444;
-      font-size: 14px;
-      line-height: 1.4;
+    .age-text{
+      color:#444;
+      font-size:14px;
+      line-height:1.4;
     }
 
-    .age-actions {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px;
-      margin-top: 16px;
+    .age-actions{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:10px;
+      margin-top:16px;
     }
 
-    .age-btn {
-      border: 0;
-      border-radius: 999px;
-      padding: 12px 14px;
-      font-weight: 800;
-      cursor: pointer;
+    .age-btn{
+      border:0;
+      border-radius:999px;
+      padding:12px 14px;
+      font-weight:900;
+      cursor:pointer;
     }
 
-    .age-btn.yes { background: #111; color: #fff; }
-    .age-btn.no { background: #eee; color: #111; }
+    .age-btn.yes{ background:#111; color:#fff }
+    .age-btn.no{ background:#eee; color:#111 }
 
-    .age-fineprint {
-      margin-top: 12px;
-      font-size: 12px;
-      color: #777;
+    .age-fineprint{
+      margin-top:12px;
+      font-size:12px;
+      color:#777;
     }
 
-    @media (max-width: 700px) {
-      .icons { grid-template-columns: 1fr; }
-      a.icon { height: 90px; }
-      .brand-logo { width: 86%; }
+    @media (max-width:900px){
+      .buttons{ grid-template-columns:1fr; }
+      .btn{ padding:26px 18px; }
+      .brand-logo{ width:86%; }
     }
   </style>
 </head>
 
 <body>
-  <!-- Age Gate Modal -->
+
+  <!-- Age Gate -->
   <div id="ageGate" class="age-gate" aria-hidden="true">
-    <div class="age-card" role="dialog" aria-modal="true" aria-label="Age verification">
+    <div class="age-card" role="dialog" aria-modal="true">
       <div class="age-title">21+ Only</div>
-      <div class="age-text">Please confirm you are 21 years of age or older to enter.</div>
+      <div class="age-text">
+        Please confirm you are 21 years of age or older to enter.
+      </div>
 
       <div class="age-actions">
         <button class="age-btn yes" id="ageYes">I’m 21+</button>
@@ -180,10 +178,10 @@
   </header>
 
   <div class="wrap">
-    <div class="icons">
-      <a class="icon" href="flower.html">Flower</a>
-      <a class="icon" href="concentrates.html">Concentrates</a>
-      <a class="icon" href="accessories.html">Accessories</a>
+    <div class="buttons">
+      <a class="btn" href="flower.html">Flower</a>
+      <a class="btn" href="concentrates.html">Concentrates</a>
+      <a class="btn" href="accessories.html">Accessories</a>
     </div>
   </div>
 
@@ -196,32 +194,28 @@
       const yes = document.getElementById("ageYes");
       const no = document.getElementById("ageNo");
 
-      function showGate() {
+      function showGate(){
         gate.classList.add("show");
-        gate.setAttribute("aria-hidden", "false");
         document.body.style.overflow = "hidden";
       }
 
-      function hideGate() {
+      function hideGate(){
         gate.classList.remove("show");
-        gate.setAttribute("aria-hidden", "true");
         document.body.style.overflow = "";
       }
 
-      // Show gate if not verified
-      if (localStorage.getItem(KEY) !== "true") {
-        showGate();
-      }
+      if (localStorage.getItem(KEY) !== "true") showGate();
 
-      yes.addEventListener("click", function () {
+      yes.addEventListener("click", function(){
         localStorage.setItem(KEY, "true");
         hideGate();
       });
 
-      no.addEventListener("click", function () {
+      no.addEventListener("click", function(){
         window.location.href = "https://www.google.com";
       });
     })();
   </script>
+
 </body>
 </html>
