--- a/accessories.html
+++ b/accessories.html
@@ -14,61 +14,18 @@
       --border:#eaeaea;
       --shadow:0 10px 28px rgba(0,0,0,.10);
     }
-
     *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;margin:0;background:var(--bg);color:var(--text)}
+    header{text-align:center;padding:26px 16px 12px}
+    .brand-logo{max-width:260px;width:72%;margin:0 auto;display:block}
+    .subtitle{margin-top:10px;font-size:13px;letter-spacing:2px;text-transform:uppercase;color:var(--muted)}
+    .wrap{max-width:1100px;margin:0 auto;padding:16px 16px 46px}
+    .back{display:inline-block;margin-bottom:16px;text-decoration:none;font-weight:900;color:#111}
 
-    body{
-      font-family:Arial,sans-serif;
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
-    }
-
-    header{
-      text-align:center;
-      padding:26px 16px 12px;
-    }
-
-    .brand-logo{
-      max-width:260px;
-      width:72%;
-      margin:0 auto;
-      display:block;
-    }
-
-    .subtitle{
-      margin-top:10px;
-      font-size:13px;
-      letter-spacing:2px;
-      text-transform:uppercase;
-      color:var(--muted);
-    }
-
-    .wrap{
-      max-width:1100px;
-      margin:0 auto;
-      padding:16px 16px 46px;
-    }
-
-    .back{
-      display:inline-block;
-      margin-bottom:16px;
-      text-decoration:none;
-      font-weight:900;
-      color:#111;
-    }
-
-    .group{
-      margin-bottom:36px;
-    }
-
+    .group{margin-bottom:36px}
     .group-title{
-      font-size:18px;
-      font-weight:900;
-      margin-bottom:10px;
-      border-bottom:2px solid #111;
-      display:inline-block;
-      padding-bottom:4px;
+      font-size:18px;font-weight:900;margin-bottom:10px;
+      border-bottom:2px solid #111;display:inline-block;padding-bottom:4px
     }
 
     .item{
@@ -80,70 +37,29 @@
       margin-top:12px;
     }
 
-    .item-name{
-      font-weight:900;
-      font-size:16px;
-    }
-
-    .sale{
-      color:#b00000;
-      font-weight:900;
-      margin-left:6px;
-      font-size:13px;
-    }
+    .item-name{font-weight:900;font-size:16px}
+    .sale{color:#b00000;font-weight:900;margin-left:6px;font-size:13px}
 
     .meta{
-      display:flex;
-      flex-wrap:wrap;
-      gap:10px;
-      margin-top:8px;
-      font-size:13px;
+      display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;font-size:13px
     }
-
     .pill{
-      background:#f4f4f4;
-      border:1px solid #eee;
-      border-radius:999px;
-      padding:6px 10px;
+      background:#f4f4f4;border:1px solid #eee;border-radius:999px;padding:6px 10px
     }
 
-    footer{
-      text-align:center;
-      padding:18px;
-      font-size:14px;
-      color:var(--muted);
-    }
+    footer{text-align:center;padding:18px;font-size:14px;color:var(--muted)}
 
     /* Age gate */
-    .age-gate{
-      position:fixed;
-      inset:0;
-      z-index:9999;
-      background:rgba(0,0,0,.72);
-      display:none;
-      align-items:center;
-      justify-content:center;
-      padding:20px;
-    }
+    .age-gate{position:fixed;inset:0;z-index:9999;background:rgba(0,0,0,.72);display:none;align-items:center;justify-content:center;padding:20px}
     .age-gate.show{display:flex}
-    .age-card{
-      background:#fff;
-      max-width:420px;
-      width:100%;
-      border-radius:18px;
-      padding:22px;
-      text-align:center;
-      box-shadow:0 20px 60px rgba(0,0,0,.35);
-    }
+    .age-card{background:#fff;max-width:420px;width:100%;border-radius:18px;padding:22px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,.35)}
     .age-title{font-size:22px;font-weight:900;margin-bottom:8px}
     .age-actions{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:16px}
     .age-btn{border:0;border-radius:999px;padding:12px;font-weight:900;cursor:pointer}
     .age-btn.yes{background:#111;color:#fff}
     .age-btn.no{background:#eee;color:#111}
 
-    @media(max-width:700px){
-      .brand-logo{width:86%}
-    }
+    @media(max-width:700px){.brand-logo{width:86%}}
   </style>
 </head>
 
@@ -188,7 +104,7 @@
   fetch("content/products.json",{cache:"no-store"})
     .then(r=>r.json())
     .then(data=>{
-      const items=data.items.filter(i=>i.category==="Accessories");
+      const items=(data.items||[]).filter(i=>i.category==="Accessories");
       const groups={};
 
       items.forEach(i=>{
