Refactor CSS styles for better readability

--- a/accessories.html
+++ b/accessories.html
@@ -6,14 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
-    :root{
-      --bg:#fafafa;
-      --text:#111;
-      --muted:#666;
-      --card:#fff;
-      --border:#eaeaea;
-      --shadow:0 10px 28px rgba(0,0,0,.10);
-    }
+    :root{--bg:#fafafa;--text:#111;--muted:#666;--card:#fff;--border:#eaeaea;--shadow:0 10px 28px rgba(0,0,0,.10);}
     *{box-sizing:border-box}
     body{font-family:Arial,sans-serif;margin:0;background:var(--bg);color:var(--text)}
     header{text-align:center;padding:26px 16px 12px}
@@ -40,12 +33,12 @@
     .item-name{font-weight:900;font-size:16px}
     .sale{color:#b00000;font-weight:900;margin-left:6px;font-size:13px}
 
-    .meta{
-      display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;font-size:13px
-    }
-    .pill{
-      background:#f4f4f4;border:1px solid #eee;border-radius:999px;padding:6px 10px
-    }
+    .meta{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;font-size:13px}
+    .pill{background:#f4f4f4;border:1px solid #eee;border-radius:999px;padding:6px 10px}
+
+    .actions-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
+    .btn{border:0;border-radius:999px;padding:10px 14px;font-weight:900;cursor:pointer}
+    .btn.add{background:#111;color:#fff}
 
     footer{text-align:center;padding:18px;font-size:14px;color:var(--muted)}
 
@@ -61,6 +54,8 @@
 
     @media(max-width:700px){.brand-logo{width:86%}}
   </style>
+
+  <script src="cart.js"></script>
 </head>
 
 <body>
@@ -90,6 +85,8 @@
 <footer>Updated Weekly • 21+</footer>
 
 <script>
+  BBE_CART.mountCartPill();
+
   // Age gate
   (function(){
     const KEY="bbe_age_verified";
@@ -114,6 +111,7 @@
       });
 
       const container=document.getElementById("menu");
+      container.innerHTML="";
 
       Object.keys(groups).forEach(groupName=>{
         const group=document.createElement("div");
@@ -138,7 +136,6 @@
             s.textContent="🚨 SALE";
             name.appendChild(s);
           }
-
           div.appendChild(name);
 
           const meta=document.createElement("div");
@@ -151,6 +148,22 @@
           meta.appendChild(pricePill);
 
           div.appendChild(meta);
+
+          const actions=document.createElement("div");
+          actions.className="actions-row";
+
+          const addBtn=document.createElement("button");
+          addBtn.className="btn add";
+          addBtn.type="button";
+          addBtn.textContent="Add";
+          addBtn.onclick=(e)=>{
+            e.stopPropagation();
+            BBE_CART.openAddFlow(item.id, "content/products.json");
+          };
+
+          actions.appendChild(addBtn);
+          div.appendChild(actions);
+
           group.appendChild(div);
         });
 
